# Laba6_repo

./: CMakeLists.txt  README.md
Task1/: CMakeLists.txt  Test1.cpp  all_functions1.h  functions.cpp  task1.cpp
Task2/: CMakeLists.txt  Test2.cpp  all_functions.h  functions.cpp  task2.cpp
Task3/: CMakeLists.txt  Test3.cpp  all_functions.h  functions.cpp  task3.cpp
googletest/: CMakeLists.txt
